--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -7,5 +7,10 @@
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #dbdbdb;
 }
