--- a/frontend/src/shared/components/Button/index.module.css
+++ b/frontend/src/shared/components/Button/index.module.css
@@ -1,8 +1,8 @@
-.button {
+/*.button {
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1rem;
   cursor: pointer;
-}
+}*/
