--- a/frontend/src/app/home/components/header/index.module.css
+++ b/frontend/src/app/home/components/header/index.module.css
@@ -48,19 +48,19 @@
   left: 0;
   height: var(--topbar-gradient);
   width: 100%;
-  background-color: blue;
   background: linear-gradient(180deg, var(--topbar-color), rgba(255, 255, 255, 0) 100%);
 }
 
 .teste {
-  color: gray;
-  width: auto;
-  height: 48px;
+  color: #fff;
+  height: 100%;
   margin: 8px;
   font-size: 32px;
   padding: 0;
+
   justify-content: center;
   align-items: center;
+
   text-align: center;
   line-height: 48px;
   font-weight: bolder;
@@ -70,24 +70,86 @@
 
 .teste span {
   position: absolute;
+  margin-left: 8px;
+  margin-top: 4px;
 }
 
 .teste:hover {
   opacity: 0.85;
 }
 
-.text_input {
+.searchbar_container {
+  position: relative;
 
+  overflow-x: hidden;
+
+  background-color: #ffffff7e;
+  border: 1px solid #ccc;
+  flex: 1;
+  width: auto;
+  max-width: 400px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: 250ms all linear;
+  -webkit-transition: 250ms all linear;
+  -moz-transition: 250ms all linear;
+  -ms-transition: 250ms all linear;
+  -o-transition: 250ms all linear;
+}
+
+.clear_bar{
+  height: 100%;
+
+  color: rgba(0, 0, 0, 0.37);
+  background-color: transparent;
+
+  display: none;
+  
+  margin: 0;
+  outline: none;
+  border: none;
+
+  position: absolute;
+  right: 60px;
+  top: 0px;
+}
+
+
+.search_button {
+  width: 48px;
+  height: 100%;
+
+  display: none;
+  
+  background-color: rgba(224, 224, 224, 0.671);
+  margin: 0;
+  outline: 1px solid #ccc;
+  border: none;
+
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
+
+.search_button:focus {
+  outline: 1px solid #ccc;
+}
+
+
+.text_input {
   font-size: 1em;
   padding: 8px 16px;
 
   flex: 1;
 
-  width: auto;
-  max-width: 400px;
+  width: 100%;
+  height: 100%;
 
-  background-color: #ffffff6b;
-  border: 1px solid #ccc;
+  background-color: transparent;
+  border: none;
 
   border-radius: 50px;
   -webkit-border-radius: 50px;
@@ -98,16 +160,17 @@
 
 .text_input:focus {
   outline: none;
-  background-color: white;
 }
 
+/*
 input:not(:placeholder-shown) {
   background-color: rgb(243, 243, 243);
 }
+*/
 
 
 
-@media (max-width: 840px) {
+@media (max-width: 880px) {
 
   .teste span {
     display: none;
