--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Lexend Deca", sans-serif;
 }
 
 html,
