--- a/frontend/src/app/home/components/header/index.module.css
+++ b/frontend/src/app/home/components/header/index.module.css
@@ -1,10 +1,6 @@
 :root {
-  /*
-  --topbar-color: #ffffffad;
-  --topbar-gradient: 25px;
-  */
-  --topbar-color: #000000ad;
-  --topbar-gradient: 0px;
+  --header-height: 56px;
+  --header-color: #2c2c2c;
 }
 
 .container {
@@ -14,14 +10,11 @@
 }
 
 .children {
-  padding-top: 80px;
-  /*max-width: 100vw;
-  height: 100vh;*/
-  /*background-color: red;*/
-
-  height: calc(100vh - 56px);
-
+  height: calc(100vh - var(--header-height));
   overflow-y: auto;
+  /*background-color: aqua;*/
+  background-image: url('data:image/svg+xml,%3Csvg width="52" height="26" viewBox="0 0 52 26" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg fill="%239C92AC" fill-opacity="0.1"%3E%3Cpath d="M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z" /%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
+
 }
 
 .topbar {
@@ -31,10 +24,8 @@
   top: 0;
   
   width: 100%;
-  /*width: calc(100% - 16px);*/
-  height: 56px;
-  background-color: var(--topbar-color);
-  /*position: absolute;*/
+  height: var(--header-height);
+  background-color: var(--header-color);
 
   justify-content: space-between;
 
@@ -46,11 +37,11 @@
   content: "";
   position: absolute;
   
-  bottom: calc((-1) * var(--topbar-gradient));
+  bottom: calc((-1) * var(--header-gradient));
   left: 0;
-  height: var(--topbar-gradient);
+  height: var(--header-gradient);
   width: 100%;
-  background: linear-gradient(180deg, var(--topbar-color), rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(180deg, var(--header-color), rgba(255, 255, 255, 0) 100%);
 }
 
 .teste {
