--- a/frontend/src/app/home/pages/TelaInicial/index.module.css
+++ b/frontend/src/app/home/pages/TelaInicial/index.module.css
@@ -12,7 +12,7 @@
   margin-bottom: 1rem;
 }
 
-.formContainer {
+.boxContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,32 +21,5 @@
   border-radius: 5px;
   padding: 2rem;
   gap: 16px;
-}
-
-.formInputContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.formInput {
-  width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 1rem;
-}
-
-.formError {
-  color: red;
-  font-size: 0.8rem;
-}
-
-.formButton {
-  width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 1rem;
-  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.418);
 }
