posts agora são exibidos como resultado da busca

--- a/frontend/src/app/home/pages/Search/index.module.css
+++ b/frontend/src/app/home/pages/Search/index.module.css
@@ -12,3 +12,32 @@
   font-size: 3rem;
   font-weight: bold;
 }
+
+.results {
+  background-color: transparent;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  gap: 8px;
+
+  max-width: 800px;
+
+  outline: 1px solid gray;
+
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+
+.tags {
+  margin-bottom: 8px;
+  outline: 1px solid rgba(128, 128, 128, 0.336);
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
