--- a/frontend/src/app/home/components/header/index.module.css
+++ b/frontend/src/app/home/components/header/index.module.css
@@ -5,7 +5,8 @@
 
 .container {
   width: 100%;
-  height: 100vh;
+  /*height: 100vh;*/
+  height: fit-content;
   overflow-x: hidden;
 }
 
@@ -44,12 +45,13 @@
   background: linear-gradient(180deg, var(--header-color), rgba(255, 255, 255, 0) 100%);
 }
 
-.teste {
+.header_title {
   color: #fff;
   height: 100%;
   margin: 8px;
   font-size: 32px;
   padding: 0;
+  text-decoration: none;
 
   justify-content: center;
   align-items: center;
@@ -57,22 +59,55 @@
   text-align: center;
   line-height: 48px;
   font-weight: bolder;
-  cursor: pointer;
+}
+
+.post_button {
+  /*color: #fff;*/
+  color: white;
+  height: 100%;
+  margin: 8px;
+  font-size: 15px;
+  padding: 5px 0px;
+
+  line-clamp: none;
+
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+  line-height: 20px;
+  font-weight: bolder;
 }
 
 
-.teste span {
+
+.header_title span {
   position: absolute;
   margin-left: 8px;
   margin-top: 4px;
 }
 
-.teste:hover {
+.header_title:hover {
   opacity: 0.85;
+}
+
+
+.search_post {
+  display: flex;
+  height: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 0;
+  width: 100%;
+  max-width: 400px;
+  margin-right: 5vw;
 }
 
 .searchbar_container {
   position: relative;
+  height: 100%;
+  width: 100%;
 
   overflow-x: hidden;
 
@@ -80,7 +115,6 @@
   border: 1px solid #ccc;
   flex: 1;
   width: auto;
-  max-width: 400px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -162,9 +196,9 @@ input:not(:placeholder-shown) {
 */
 
 
-@media (max-width: 880px) {
+@media (max-width: 960px) {
 
-  .teste span {
+  .header_title span {
     display: none;
   }
 }
