--- a/frontend/src/app/home/components/header/index.module.css
+++ b/frontend/src/app/home/components/header/index.module.css
@@ -31,7 +31,6 @@
   justify-content: space-between;
 
   padding: 0 16px;
-  z-index: 5;
 }
 
 .topbar::after {
@@ -93,6 +92,7 @@
 
 
 .search_post {
+  position: relative;
   display: flex;
   height: 100%;
   flex-direction: row;
@@ -109,9 +109,9 @@
   height: 100%;
   width: 100%;
 
-  overflow-x: hidden;
+  overflow: visible;
 
-  background-color: #ffffff7e;
+  background-color: white;
   border: 1px solid #ccc;
   flex: 1;
   width: auto;
@@ -148,17 +148,19 @@
 .search_button {
   width: 48px;
   height: 100%;
-
   display: none;
-  
-  background-color: rgba(224, 224, 224, 0.671);
+  background-color: rgb(224, 224, 224);
   margin: 0;
   outline: 1px solid #ccc;
   border: none;
-
   position: absolute;
   right: 0px;
   top: 0px;
+  border-radius: 0 4px 4px 0;
+  -webkit-border-radius: 0 4px 4px 0;
+  -moz-border-radius: 0 4px 4px 0;
+  -ms-border-radius: 0 4px 4px 0;
+  -o-border-radius: 0 4px 4px 0;
 }
 
 .search_button:focus {
